# Smart-Data-Processing-Framework

./: Smart Data Processing Framework.sln
Smart Data Processing Framework/: CMakeLists.txt  ClassDiagram.cd  DataQueue.h  Logger.h  ProcessingSystem.h  Processor.h  ProcessorFactory.h  Smart Data Processing Framework.vcxproj  Smart Data Processing Framework.vcxproj.filters  main.cpp
